--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<relativePath />
 ` </parent>
   <groupId>com.companyname.bank</groupId>
-  <artifactId>abcab</artifactId>
+  <artifactId>bankapp</artifactId>
   <packaging>jar</packaging>
   <version>1.1-SNAPSHOT</version>
-  <name>abcab</name>
+  <name>bankapp</name>
   <url>http://maven.apache.org</url>
   <properties>
     <maven.compiler.source>1.6</maven.compiler.source>
